--- a/nguyento.html
+++ b/nguyento.html
@@ -248,28 +248,16 @@
             /* Màu chữ cho khối mã */
         }
 
-        footer {
-            background: linear-gradient(to right, #1a1c2c, #2d3436);
-            /* Màu nền cho footer */
-            color: white;
-            padding: 30px 0 10px 0;
+        .footer {
+            background-color: #f1f1f1;
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 30px;
         }
 
-        footer h5 {
-            color: #74b9ff;
-            /* Màu tiêu đề trong footer */
-        }
-
-        footer a {
-            color: #dcdde1;
-            /* Màu liên kết trong footer */
-            transition: color 0.3s;
-            /* Hiệu ứng chuyển màu cho liên kết */
-        }
-
-        footer a:hover {
-            color: #ffcc00;
-            /* Màu liên kết khi hover */
+        .footer p {
+            margin: 0;
+            color: #333;
         }
     </style>
 </head>
@@ -307,13 +295,10 @@
                             style="font-size: 18px; padding: 10px 20px; color: #8B4513;">Nguyên tố</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sdk.hoyoverse.com/payment/genshin/index.html#/"
-                            target="_blank" style="font-size: 18px; padding: 10px 20px; color: #8B4513;">Nạp</a>
+                        <a class="nav-link" href="lienhe.html"
+                            style="font-size: 18px; padding: 10px 20px; color: #8B4513;">Liên hệ</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://genshin.hoyoverse.com/vi/gift" target="_blank"
-                            style="font-size: 18px; padding: 10px 20px; color: #8B4513;">Mã quà</a>
-                    </li>
+
                 </ul>
                 <a href="https://genshin.hoyoverse.com/vi/download" target="_blank" class="btn btn-warning"
                     style="padding: 10px 20px; font-size: 18px; color: #8B4513; text-decoration: none; transition: all 0.3s ease; margin: 10px 15px;">
@@ -322,13 +307,6 @@
             </div>
         </div>
     </nav>
-
-    <div class="particles-background"></div>
-    <div class="background-lines"></div>
-
-    <div class="header">
-    </div>
-
     <!--nguyên tố-->
     <div class="container mt-5 pt-5">
         <h2 class="section-title text-center mb-5">Hệ Thống Nguyên Tố</h2>
@@ -617,100 +595,10 @@
         </div>
     </div>
 
-    <footer>
-        <!-- Footer -->
-        <footer class="footer"
-            style="background: linear-gradient(to right, #1a1c2c, #2d3436); color: white; padding: 60px 0 20px 0;">
-            <div class="container">
-                <!-- Main Footer Content -->
-                <div class="row mb-4">
-                    <!-- Liên kết -->
-                    <div class="col-md-4">
-                        <h5 style="color: #74b9ff; margin-bottom: 20px; font-weight: bold;">Liên kết hữu ích</h5>
-                        <ul style="list-style: none; padding: 0;">
-                            <li class="mb-2"><a href="https://genshin.hoyoverse.com/vi/home" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Trang chủ
-                                    chính
-                                    thức</a></li>
-                            <li class="mb-2"><a href="https://www.hoyolab.com/" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">HoYoLAB</a>
-                            </li>
-                            <li class="mb-2"><a href="https://genshin.hoyoverse.com/vi/download" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Tải game</a>
-                            </li>
-                            <li class="mb-2"><a href="https://genshin.hoyoverse.com/vi/news" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Tin tức</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Hỗ trợ -->
-                    <div class="col-md-4">
-                        <h5 style="color: #74b9ff; margin-bottom: 20px; font-weight: bold;">Hỗ trợ người chơi</h5>
-                        <ul style="list-style: none; padding: 0;">
-                            <li class="mb-2"><a href="https://www.hoyolab.com/article_pre/1308" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Hướng dẫn
-                                    người
-                                    mới</a></li>
-                            <li class="mb-2"><a href="https://genshin.hoyoverse.com/vi/company/privacy" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Chính sách
-                                    bảo
-                                    mật</a></li>
-                            <li class="mb-2"><a href="https://www.hoyoverse.com/vi-vn/about-us" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Về chúng
-                                    tôi</a>
-                            </li>
-                            <li class="mb-2"><a href="https://www.hoyoverse.com/vi-vn/contact" target="_blank"
-                                    style="color: #dcdde1; text-decoration: none; transition: color 0.3s;">Liên hệ</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Mạng x hội -->
-                    <div class="col-md-4">
-                        <h5 style="color: #74b9ff; margin-bottom: 20px; font-weight: bold;">Kết nối với chúng tôi</h5>
-                        <div class="social-links" style="display: flex; gap: 15px;">
-                            <a href="https://www.facebook.com/Genshinimpact.vi" target="_blank"
-                                style="color: #dcdde1; font-size: 24px; transition: all 0.3s ease;"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://twitter.com/genshinimpactvi" target="_blank"
-                                style="color: #dcdde1; font-size: 24px; transition: all 0.3s ease;"><i
-                                    class="fab fa-twitter"></i></a>
-                            <a href="https://www.youtube.com/@GenshinImpact" target="_blank"
-                                style="color: #dcdde1; font-size: 24px; transition: all 0.3s ease;"><i
-                                    class="fab fa-youtube"></i></a>
-                            <a href="https://www.instagram.com/genshinimpact/" target="_blank"
-                                style="color: #dcdde1; font-size: 24px; transition: all 0.3s ease;"><i
-                                    class="fab fa-instagram"></i></a>
-                            <a href="https://discord.com/invite/genshinimpact" target="_blank"
-                                style="color: #dcdde1; font-size: 24px; transition: all 0.3s ease;"><i
-                                    class="fab fa-discord"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Student Info Section -->
-                <div class="row justify-content-center mb-4">
-                    <div class="col-12 text-center">
-                        <hr style="border-color: rgba(255,255,255,0.1); margin: 20px 0;">
-                        <div
-                            style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; border: 1px solid rgba(255,255,255,0.1);">
-                            <h5 style="color: #74b9ff; font-weight: bold; margin-bottom: 15px;">Thông tin sinh viên thực
-                                hiện</h5>
-                            <div style="color: #dcdde1; font-size: 15px; line-height: 1.8;">
-                                <p style="margin-bottom: 5px;">Họ và tên: Nguyễn Nhật Trường</p>
-                                <p style="margin-bottom: 5px;">MSSV: 110122197</p>
-                                <p style="margin-bottom: 5px;">Lớp: D22TTC</p>
-                                <p style="margin-bottom: 5px;">Đồ án: Thiết kế website giới thiệu game Genshin Impact
-                                </p>
-                                <p style="margin-bottom: 5px;">Giảng viên hướng dẫn: Phạm Minh Đương</p>
-                                <p>Trường Đại học Trà Vinh</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+    <footer class="footer">
+        <p>Copyright © www.mygenshin.com</p>
+        <p>Điện thoại: 0394 127 625, Địa chỉ: Mỹ Cẩm, Càng Long, Trà Vinh</p>
+    </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
